<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sourcetextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sourcetextview" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/coretypetextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coretypetextview" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/restextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restextview" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/cloudservertextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudservertextview" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/realtimetextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realtimetextview" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/realtimeoff"
                android:textOn="@string/realtimeon"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/useridtextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useridtextview" />

            <EditText
                android:id="@+id/userideditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/useridedittext" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/precisiontextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precisiontextview" />

            <EditText
                android:id="@+id/precisioneditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/precisionedittext" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ranktextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranktextview" />

            <EditText
                android:id="@+id/rankeditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/rankedittext" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/reftextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reftextview" />

            <EditText
                android:id="@+id/reftexteditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
             <TextView
                android:id="@+id/decibeltextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decibeltext" />
             
             <TextView
                android:id="@+id/dbtextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
        </TableRow>
        
        
    </TableLayout>
    </ScrollView>
	<LinearLayout
             android:layout_height="wrap_content"
             android:id="@+id/llybuttom"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_alignParentBottom="true">
    
	 <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#FFFF00"
        android:text="@string/initbutton" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#B4EEB4"
        android:text="@string/recordbutton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFF00"
        android:text="@string/replaybutton" />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#B4EEB4"
        android:text="@string/deletebutton" />


	</LinearLayout>
	
</RelativeLayout>