<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#B4EEB4">

                <TextView
                    android:id="@+id/rtextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ref" />

</TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rereftextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

</TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/scoretextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

</TableRow>
            
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFF00" >

                <TextView
                    android:id="@+id/abstextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abstractresult" />

</TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/abstracttextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

</TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#B4EEB4" >

                <TextView
                    android:id="@+id/urltextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/urlresult" />

                </TableRow>
            
            <TableRow 
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  >

                
            
            <TextView 
                android:id="@+id/audioUrltextView" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:ellipsize="start" /></TableRow>
            
            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F08080" >

                <TextView
                    android:id="@+id/dettextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailresult" />
</TableRow> 
                
                        <TableRow 
                android:id="@+id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  >
                
                             <TextView 
                                 android:id="@+id/detailtextView" 
                                 android:layout_width="match_parent" 
                                 android:layout_height="wrap_content" />
                             </TableRow> 
        </TableLayout>

    </ScrollView>

</RelativeLayout>